--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,4 @@
-; PlatformIO Project Configuration File
+;PlatformIO Project Configuration File
 ;
 ;   Build options: build flags, source filter
 ;   Upload options: custom upload port, speed and extra flags
@@ -12,3 +12,6 @@
 platform = atmelavr
 framework = arduino
 board = metro
+lib_deps = 
+	Adafruit NeoPixel@^1.2.5
+
